More Scrollbar Fixes.

--- a/styles/critical.css
+++ b/styles/critical.css
@@ -19,7 +19,6 @@ html {
   overflow-y: auto;
   width: 100%;
   min-height: 100%;
-  scrollbar-gutter: stable;
 }
 
 body {
